--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
             <ul class="nav-links">
                 <li><a href="#home" class="active">Home</a></li>
                 <li><a href="#blog">Blog</a></li>
-                <li><a href="https://darknux.notion.site/Sherlocks-5051b3fd21644af58dbcec4cd0db7be0">Writeups</a></li>
+                <li><a href="https://darknux.notion.site/Sherlocks-5051b3fd21644af58dbcec4cd0db7be0" download>Writeups</a></li>
                 <li><a href="#education">Projects</a></li>
-                <li><a href="file:///C:/Users/DarkL/Desktop/Website%20project/files/resume.pdf" target="_blank">Resume</a></li>
+                <li><a href="files/resume.pdf" target="_blank">Resume</a></li>
             </ul>
         </nav>
     </header>
