--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="https://darknux.notion.site/Sherlocks-5051b3fd21644af58dbcec4cd0db7be0">Writeups</a></li>
                 <li><a href="#education">Projects</a></li>
-                <li><a href="files/resume.pdf" target="_blank" download>Resume</a></li>
+                <li><a href="files/resume.pdf" target="_blank" download="soc-andrew_res.pdf">Resume</a></li>
             </ul>
         </nav>
     </header>
