--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <div class="hero-content">
             <h1 class="name">$whoami</h1>
             <h2>I'm a <span id="typed-text"></span><span class="typing"></span></h2>
-            <p>Welcome to my page! I'm Andrew, I'm an aspiring security professional. At current moment I'm focusing in Threat Detection and Threat Hunting. Learn more about me</p>
+            <p>Welcome to my page! I'm Andrew, I'm an aspiring security professional. At current moment I'm focusing in Threat Detection and Threat Hunting. To learn more about me, check out my blog or my writeups</p>
             <a href="#contact" class="btn">Hire me</a>
         </div>
     </main>
